# redactyl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  test_results.txt
docs/: BATCH_DETECTION_MIGRATION.md  DYNAMIC_DETECTION_ARCHITECTURE.md  NAME_COMPONENT_GROUPING_SPEC.md  PERFORMANCE_STRATEGY.md
examples/: advanced_dynamic_detection.py  batch_detection_double_newlines.py  callback_example.py  dynamic_detection_poc.py  gliner_optional_example.py  piiconfig_example.py  streaming_decorator.py
src/redactyl/: __init__.py  batch.py  callbacks.py  core.py  entity_tracker.py  exceptions.py  handlers.py  protocols.py  pydantic_integration.py  session.py  types.py  utils.py
src/redactyl/detectors/: __init__.py  base.py  gliner_parser.py  mock.py  presidio.py  smart_mock.py
tests/: __init__.py  conftest.py  test_callbacks.py  test_container_traversal.py  test_critical_fixes.py  test_persistence_debug.py  test_streaming_persistence.py  test_tracker_debug.py
tests/experiments/: __init__.py  name_parser_comparison_results.md  test_name_parser_comparison.py  test_name_parsers_simple.py
tests/features/: test_protect_stream_decorator.py  test_streaming_decorator.py  test_sync_generator_decorator.py  test_unredact_flag.py
tests/fixes/: test_entity_tracking.py  test_failing_scenario_1.py  test_failing_scenario_2.py
tests/integration/: __init__.py  test_batch_email_debug.py  test_batch_real_world.py  test_consistent_tokens.py  test_content_pattern_handling.py  test_core_loop.py  test_default_PIIConfig.py  test_default_PIIConfig_debug.py  test_edge_cases.py  test_email_redaction.py  test_full_integration.py  test_gliner_optional_integration.py  test_name_component_grouping.py  test_name_components.py  test_persistence.py  test_pydantic_integration.py  test_real_world_scenarios.py  test_separator_strategies.py  test_sessions.py  test_state_accumulation.py
tests/unit/: __init__.py  test_error_messages.py  test_fuzzy_mode.py  test_gliner_optional.py  test_hallucination_handler.py  test_pii_entity.py  test_redaction_state.py
tests/utils/: decorator.py
