[project]
authors = [
  {name = "screensailor"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "presidio-analyzer>=2.2.0",
  "presidio-anonymizer>=2.2.0",
  "spacy>=3.8.7",
  "nameparser>=1.1.0",
  "pydantic>=2.0",
]
description = "Fast, deterministic PII redaction using type-preserving tokens ([NAME_1], [EMAIL_2]) with perfect reversibility"
keywords = [
  "pii",
  "privacy",
  "redaction",
  "llm",
  "ai",
  "data-protection",
  "gdpr",
  "anonymization",
  "presidio",
  "gliner",
]
license = {text = "MIT"}
name = "redactyl"
readme = "README.md"
requires-python = ">=3.12,<3.14"
version = "0.1.3"

[project.urls]
Documentation = "https://github.com/screensailor/redactyl#readme"
Homepage = "https://github.com/screensailor/redactyl"
Issues = "https://github.com/screensailor/redactyl/issues"
Repository = "https://github.com/screensailor/redactyl"

[project.optional-dependencies]
gliner = ["gliner>=0.2.21"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  "hypothesis>=6.0.0",
  "ruff>=0.2.0",
  "pyright>=1.1.0",
  "pytest-asyncio>=1.1.0",
  "probablepeople>=0.5.6",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff]
line-length = 120  # More reasonable for modern screens
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "Q", "C90"]
ignore = [
    "E501",  # Line too long - handled by formatter
    "W293",  # Blank line contains whitespace
    "W291",  # Trailing whitespace
    "N806",  # Variable in function should be lowercase (for constants like FIELD_SEPARATOR)
    "N802",  # Function name should be lowercase
    "N803",  # Argument name should be lowercase
    "B008",  # Do not perform function calls in argument defaults
    "B904",  # Within an except clause, raise exceptions with from
    "C901",  # Too complex
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.pyright]
pythonVersion = "3.12"
reportDuplicateImport = true
reportUnusedImport = true
reportUnusedVariable = true
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "-v --cov=redactyl --cov-report=term-missing"
pythonpath = ["src", "."]
testpaths = ["tests"]
# Exclude experiments from coverage to avoid hanging
norecursedirs = ["tests/experiments"]
